--- a/TrueNgine/TrueNgine.vcxproj.filters
+++ b/TrueNgine/TrueNgine.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="ObjectNDManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera3D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="PropertiesWindow.h">
